[package]
name = "oxideboy"
version = "0.1.0"
authors = ["Sam Day <me@samcday.com>"]
edition = "2018"

[dependencies]
bincode = "1.1"
serde = { version = "1.0", features = ["derive"] }
serde_bytes = "0.10"

[dev-dependencies]
bencher = "0.1"
image = "0.21"
paste = "0.1"
snap = "0.2"

[[bench]]
name = "benches"
harness = false
