[package]
name = "crate-worker"
version = "0.1.0"
authors = ["Sam Day <me@samcday.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook"]

[dependencies]
cfg-if = "0.1.2"
#gloo-timers = { git = "https://github.com/samcday/gloo" }
js-sys = "0.3.14"
lazy_static = "1.3.0"
md5 = "0.6.1"
serde = { version = "1.0", features = ["derive"] }
wasm-bindgen = { version = "^0.2", features = ["serde-serialize"] }
web-sys = { version = "0.3", features = ["console", "Window", "DedicatedWorkerGlobalScope", "MessageEvent", "Performance"] }

# The `console_error_panic_hook` crate provides better debugging of panics by
# logging them with `console.error`. This is great for development, but requires
# all the `std::fmt` and `std::panicking` infrastructure, so isn't great for
# code size when deploying.
console_error_panic_hook = { version = "0.1.1", optional = true }

# `wee_alloc` is a tiny allocator for wasm that is only ~1K in code size
# compared to the default allocator's ~10K. It is slower than the default
# allocator, however.
#
# Unfortunately, `wee_alloc` requires nightly Rust when targeting wasm for now.
wee_alloc = { version = "0.4.2", optional = true }

[dependencies.oxideboy]
path = "../../oxideboy"

[dependencies.gloo-timers]
path = "/home/sam/src/gloo/crates/timers"

[dependencies.gloo-console-timer]
path = "/home/sam/src/gloo/crates/console-timer"

[dev-dependencies]
wasm-bindgen-test = "0.2"

[profile.release]
# Tell `rustc` to optimize for small code size.
opt-level = "s"
